修改demo1.html，测试git拉取代码

--- a/vue/src/main/webapp/demo1.html
+++ b/vue/src/main/webapp/demo1.html
@@ -9,6 +9,10 @@
 		<div id="app">
 			{{message}}
 		</div>
+
+	测试git。。。。。。。
+
+
 	</body>
 	<script>
 		//view model
@@ -19,4 +23,9 @@
 			}
 		});
 	</script>
+
+
+
+
+
 </html>
